Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -11,15 +11,28 @@ Fonoster is an innovative Programmable Telecommunications Stack that will allow 
 
 The most notable features of Fonoster are:
 
-- Multitenancy
-- Easy deployment of PBX functionalities
-- Programmable Voice Applications
-- NodeJS SDK
-- Support for Amazon Simple Storage Service (S3)
-- Secure API endpoints with Let's Encrypt
-- Authentication with OAuth2
-- Authentication with JWT
-- Role-Based Access Control (RBAC)
-- Plugins-based Command-line Tool
-- Support for Google Speech APIs
+* Multitenancy
+
+* Easy deployment of PBX functionalities
+
+* Programmable Voice Applications
+
+* NodeJS SDK
+
+* Support for Amazon Simple Storage Service (S3)
+
+* Secure API endpoints with Let's Encrypt
+
+* Authentication with OAuth2
+
+* Authentication with JWT
+
+* Role-Based Access Control (RBAC)
+
+* Plugins-based Command-line Tool
+
+* Support for Google Speech APIs
+
+We're open source and you can choose to use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your own infrastructure.
+
 
