Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,9 +1,7 @@
 ---
 title: Introduction
-description: "Welcome to the home of Fonoster's documentation"
+description: "Welcome to the Trigger.dev v3 documentation."
 ---
-
-Welcome to the Trigger.dev v3 documentation.
 
 ## What is Fonoster?
 
@@ -34,5 +32,3 @@ The most notable features of Fonoster are:
 * Support for Google Speech APIs
 
 We're open source and you can choose to use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your own infrastructure.
-
-
