Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: "Welcome to the Trigger.dev v3 documentation."
+description: "Welcome to the home of Fonoster's documentation"
 ---
 
 ## What is Fonoster?
