Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,7 +5,7 @@ description: "Welcome to the home of Fonoster's documentation"
 
 ## What is Fonoster?
 
-Fonoster is an innovative Programmable Telecommunications Stack that will allow businesses to connect telephony services with the Internet entirely through a cloud-based utility.
+Fonoster is an innovative Programmable Telecommunications Stack that allows businesses to connect telephony services with the Internet entirely through a cloud-based utility.
 
 The most notable features of Fonoster are:
 
@@ -15,18 +15,20 @@ The most notable features of Fonoster are:
 
 * Programmable Voice Applications
 
-* NodeJS SDK
+* NodeSDK and WebSDK
 
 * Support for Amazon Simple Storage Service (S3)
 
 * Secure API endpoints with Let's Encrypt
 
 * Authentication with OAuth2
+
 * Authentication with JWT
+
 * Role-Based Access Control (RBAC)
 
 * Plugins-based Command-line Tool
 
-* Support for Google Speech APIs
+* Support for Speech APIs from Google, Deepgram, ElevenLabs, and more
 
-We're open source and you can choose to use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your own infrastructure.
+We're open source and you can choose to use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your infrastructure.
