Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -31,4 +31,4 @@ The most notable features of Fonoster are:
 
 * Support for Speech APIs from Google, Deepgram, ElevenLabs, and more
 
-We're open source and you can choose to use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your infrastructure.
+We're open source and you can use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your infrastructure.
