--- a/introduction.mdx
+++ b/introduction.mdx
@@ -31,4 +31,24 @@ The most notable features of Fonoster are:
 
 * Support for Speech APIs from Google, Deepgram, ElevenLabs, and more
 
-We're open source and you can use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your infrastructure.
+We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your infrastructure.
+
+## Getting help
+
+<CardGroup cols={2}>
+  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
+    Customize your docs to your company's colors and brands
+  </Card>
+
+  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
+    Automatically generate endpoints from an OpenAPI spec
+  </Card>
+
+  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
+    Build interactive features and designs to guide your users
+  </Card>
+
+  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
+    Check out our showcase of our favorite documentation
+  </Card>
+</CardGroup>
