Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -36,8 +36,8 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
 ## Getting help
 
 <CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
+  <Card title="Join our Discord server" icon="discord" href="https://discord.com/invite/4QWgSz4hTC">
+    The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
   <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
