--- a/introduction.mdx
+++ b/introduction.mdx
@@ -31,7 +31,7 @@ The most notable features of Fonoster are:
 
 * Support for Speech APIs from Google, Deepgram, ElevenLabs, and more
 
-We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host Trigger.dev on your infrastructure.
+We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host Fonoster on your infrastructure.
 
 ## Getting help
 
@@ -40,8 +40,8 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
+  <Card title="Follow us on X (Twitter)" icon="twitter" href="https://twitter.com/fonoster">
+    Follow us on X (Twitter) to get the latest updates and news.
   </Card>
 
   <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
