--- a/introduction.mdx
+++ b/introduction.mdx
@@ -40,15 +40,15 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="twitter" href="https://twitter.com/fonoster">
-    Follow us on X (Twitter) to get the latest updates and news.
+  <Card title="Follow us on X (Twitter)" icon="x" href="https://twitter.com/fonoster">
+    Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
+  <Card title="Schedule a call" icon="phone" href="https://mintlify.com/docs/content/components/accordions">
+    Arrange a call with the team. We can help answer questions and give a 1-on-1 help building on Fonoster.
   </Card>
 
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
+  <Card title="Give us a start on GitHub" icon="stars" href="https://github.com/fonoster/fonoster">
+    Check us out at github.com/fonoster
   </Card>
 </CardGroup>
