Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -36,11 +36,11 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
 ## Getting help
 
 <CardGroup cols={2}>
-  <Card title="Join our Discord server" icon="discord" href="https://discord.com/invite/4QWgSz4hTC">
+  <Card title="Join our Discord server" icon="discord" iconType="brand" href="https://discord.com/invite/4QWgSz4hTC">
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x" href="https://twitter.com/fonoster">
+  <Card title="Follow us on X (Twitter)" icon="x" iconType="brand" href="https://twitter.com/fonoster">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
