--- a/introduction.mdx
+++ b/introduction.mdx
@@ -45,7 +45,7 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
   </Card>
 
   <Card title="Schedule a call" icon="phone" href="https://mintlify.com/docs/content/components/accordions">
-    Arrange a call with the team. We can help answer questions and give a 1-on-1 help building on Fonoster.
+    Arrange a call with the team. We can help answer questions and give 1-on-1 help building on Fonoster.
   </Card>
 
   <Card title="Give us a start on GitHub" icon="stars" href="https://github.com/fonoster/fonoster">
