--- a/introduction.mdx
+++ b/introduction.mdx
@@ -44,11 +44,11 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
-  <Card title="Schedule a call" icon="phone" href="https://mintlify.com/docs/content/components/accordions">
+  <Card title="Schedule a call" icon="phone" iconType="solid" href="https://mintlify.com/docs/content/components/accordions">
     Arrange a call with the team. We can help answer questions and give 1-on-1 help building on Fonoster.
   </Card>
 
-  <Card title="Give us a start on GitHub" icon="stars" href="https://github.com/fonoster/fonoster">
+  <Card title="Give us a start on GitHub" icon="stars" iconType="solid" href="https://github.com/fonoster/fonoster">
     Check us out at github.com/fonoster
   </Card>
 </CardGroup>
