--- a/introduction.mdx
+++ b/introduction.mdx
@@ -36,11 +36,11 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
 ## Getting help
 
 <CardGroup cols={2}>
-  <Card title="Join our Discord server" icon="discord" iconType="brand" href="https://discord.com/invite/4QWgSz4hTC">
+  <Card title="Join our Discord server" icon="discord" iconType="brands" href="https://discord.com/invite/4QWgSz4hTC">
     The #get-help channel is a great place to get help with any questions about Fonoster.
   </Card>
 
-  <Card title="Follow us on X (Twitter)" icon="x" iconType="brand" href="https://twitter.com/fonoster">
+  <Card title="Follow us on X (Twitter)" icon="x" iconType="brands" href="https://twitter.com/fonoster">
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
@@ -48,7 +48,7 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
     Arrange a call with the team. We can help answer questions and give 1-on-1 help building on Fonoster.
   </Card>
 
-  <Card title="Give us a start on GitHub" icon="stars" iconType="solid" href="https://github.com/fonoster/fonoster">
+  <Card title="Give us a start on GitHub" icon="stars" iconType="solid" iconColor="#FBBF24" href="https://github.com/fonoster/fonoster">
     Check us out at github.com/fonoster
   </Card>
 </CardGroup>
