Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -48,7 +48,7 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
     Arrange a call with the team. We can help answer questions and give 1-on-1 help building on Fonoster.
   </Card>
 
-  <Card title="Give us a start on GitHub" icon="stars" iconType="solid" color="#FBBF24" href="https://github.com/fonoster/fonoster">
+  <Card title="Give us a start on GitHub" icon="star" iconType="solid" color="#FBBF24" href="https://github.com/fonoster/fonoster">
     Check us out at github.com/fonoster
   </Card>
 </CardGroup>
