--- a/introduction.mdx
+++ b/introduction.mdx
@@ -33,6 +33,20 @@ The most notable features of Fonoster are:
 
 We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host Fonoster on your infrastructure.
 
+## What can you build?
+
+With Fonoster, you can build anything from simple IVR applications to advanced ones with LLM. Checkout a demo bellow for a glance at what you can build.
+
+<iframe
+  width="560"
+  height="315"
+  src="https://youtube.com/shorts/S2ZiG1n41do"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+
 ## Getting help
 
 <CardGroup cols={2}>
@@ -44,7 +58,7 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
     Follow us on X (Twitter) for the latest updates and news.
   </Card>
 
-  <Card title="Schedule a call" icon="phone" iconType="solid" href="https://mintlify.com/docs/content/components/accordions">
+  <Card title="Schedule a call" icon="phone" iconType="solid" href="https://cal.com/psanders/coffee-chat">
     Arrange a call with the team. We can help answer questions and give 1-on-1 help building on Fonoster.
   </Card>
 
