Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -35,17 +35,9 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
 
 ## What can you build?
 
-With Fonoster, you can build anything from simple IVR applications to advanced ones with LLM. Checkout a demo bellow for a glance at what you can build.
+With Fonoster, you can build anything from simple IVR applications to advanced ones with LLM. Check out a demo below for a glance at what you can build.
 
-<iframe
-  width="560"
-  height="315"
-  src="https://youtube.com/shorts/S2ZiG1n41do"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=hFOTzboLPnw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen />
 
 ## Getting help
 
