--- a/introduction.mdx
+++ b/introduction.mdx
@@ -35,7 +35,7 @@ We're open source, and you can use the Fonoster Cloud (Coming soon) or Self-host
 
 ## What can you build?
 
-With Fonoster, you can build anything from simple IVR applications to advanced ones with LLM. Check out a demo below for a glance at what you can build.
+With Fonoster, you can build any time of voice application, from simple IVRs to advanced Voice AI. Check out a demo below for a glance at what you can make.
 
 <iframe width="100%" height="400px" src="https://www.youtube.com/embed/hFOTzboLPnw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen />
 
