--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,11 +1,23 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Learn how to get started with Fonoster quickly.'
 ---
 
-## Setup your development
+Before integrating Fonoster into your application, you need an account, setup the command-line interface, and link a virtual phone number. This guide walks you through those steps.
 
-Learn how to update your docs locally and deploy them to the public.
+<Steps>
+  <Step title="Create an account">
+    These are instructions or content that only pertain to the first step.
+  </Step>
+  <Step title="Install the command-line tool">
+    These are instructions or content that only pertain to the second step.
+  </Step>
+  <Step title="Create a new application">
+    These are instructions or content that only pertain to the third step.
+  </Step>
+</Steps>
+
+
 
 ### Edit and preview
 
@@ -18,35 +30,35 @@ Learn how to update your docs locally and deploy them to the public.
     [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
     in your terminal.
   </Accordion>
+
   <Accordion icon="rectangle-terminal" title="Preview changes">
     Previewing helps you make sure your changes look as intended. We built a
     command line interface to render these changes locally. 1. Install the
     [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
+    documentation changes locally with this command: `npm i -g mintlify`
+    2\. Run the following command at the root of your documentation (where
+    `mint.json` is): `mintlify dev`
   </Accordion>
 </AccordionGroup>
 
 ### Deploy your changes
 
 <AccordionGroup>
+  <Accordion icon="message-bot" title="Install our Github app">
+    Our Github app automatically deploys your changes to your docs site, so you
+    don't need to manage deployments yourself. You can find the link to install on
+    your [dashboard](https://dashboard.mintlify.com). Once the bot has been
+    successfully installed, there should be a check mark next to the commit hash
+    of the repo.
+  </Accordion>
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
+  <Accordion icon="rocket" title="Push your changes">
+    [Commit and push your changes to
+    Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
+    for your changes to update in your docs site. If you push and don't see that
+    the Github app successfully deployed your changes, you can also manually
+    update your docs through our [dashboard](https://dashboard.mintlify.com).
+  </Accordion>
 </AccordionGroup>
 
 ## Update your docs
@@ -54,33 +66,19 @@ Learn how to update your docs locally and deploy them to the public.
 Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
 
 <CardGroup>
+  <Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
+    Add flair to your docs with personalized branding.
+  </Card>
 
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
+  <Card title="Add API Endpoints" icon="square-code" href="/api-playground/configuration">
+    Implement your OpenAPI spec and enable API user interaction.
+  </Card>
 
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
+  <Card title="Integrate Analytics" icon="chart-mixed" href="/analytics/supported-integrations">
+    Draw insights from user interactions with your documentation.
+  </Card>
 
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
-
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
-
+  <Card title="Host on a Custom Domain" icon="browser" href="/settings/custom-domain/subdomain">
+    Keep your docs on your own website's subdomain.
+  </Card>
 </CardGroup>
