Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -6,18 +6,18 @@ description: 'Learn how to get started with Fonoster quickly.'
 Before integrating Fonoster into your application, you need an account, setup the command-line interface, and link a virtual phone number. This guide walks you through those steps.
 
 <Steps>
-  <Step title="Create an account">
+  <Step title="Request early access">
     These are instructions or content that only pertain to the first step.
   </Step>
+
   <Step title="Install the command-line tool">
     These are instructions or content that only pertain to the second step.
   </Step>
+
   <Step title="Create a new application">
     These are instructions or content that only pertain to the third step.
   </Step>
 </Steps>
-
-
 
 ### Edit and preview
 
