Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -168,7 +168,7 @@ Before integrating Fonoster into your application, you need an account, setup th
   </Step>
 </Steps>
 
-Now that you created your first voice application, learn more about the advanced features and concepts of Fonoster.
+Now that you have created your first voice application learn more about Fonoster's advanced features and concepts.
 
 <CardGroup cols={2}>
   <Card title="Programmable Voice" icon="rocket-launch" href="https://discord.com/invite/4QWgSz4hTC">
