Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Quickstart'
-description: 'Learn how to get started with Fonoster quickly.'
+description: 'Learn how to get started with Fonoster.'
 ---
 
-Before integrating Fonoster into your application, you need an account, setup the command-line interface, and link a virtual phone number. This guide walks you through those steps.
+Before integrating Fonoster into your application, you need an account to set up the command-line interface and link a virtual phone number. This guide walks you through those steps.
 
 <Steps>
   <Step title="Request early access">
@@ -168,7 +168,7 @@ Before integrating Fonoster into your application, you need an account, setup th
   </Step>
 </Steps>
 
-Now that you have created your first voice application learn more about Fonoster's advanced features and concepts.
+Now that you have created your first Application learn more about Fonoster's advanced features and concepts.
 
 <CardGroup cols={2}>
   <Card title="Programmable Voice" icon="rocket-launch" href="https://discord.com/invite/4QWgSz4hTC">
