Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,7 +3,7 @@ title: 'Quickstart'
 description: 'Learn how to get started with Fonoster.'
 ---
 
-Before integrating Fonoster into your application, you need an account to set up the command-line interface and link a virtual phone number. This guide walks you through those steps.
+Most of Fonoster's use cases require an account, the Command-line interface, and a virtual phone number. This guide will walk you through the steps to start with Fonoster quickly.
 
 <Steps>
   <Step title="Request early access">
