Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -54,7 +54,7 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
     ngrok tcp 50061
     ```
 
-    This will give you a public URL that you can use to access your application.
+    This will give you a public endpoint that you can use to access your application.
   </Step>
 
   <Step title="Link a virtual phone number">
