Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -113,7 +113,7 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
       fonoster sipnet:numbers:linkTwilioNumber
       ```
 
-      You will be asked to enter the *Twilio SID* and *Twilio Auth Token*. Once you have entered this information, the Twilio phone number will be linked to your application.
+      You will be asked to enter an existing virtual phone number, the *Twilio SID*, and the *Twilio Auth Token*. Once you have entered this information, the Twilio phone number will be linked to your application.
 
       To confirm that the phone number was linked successfully, you can run the following command:
 
