Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -38,6 +38,10 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
     node index.js
     ```
 
+    Your output should look like this:
+
+    <img width="100%" src="/images/custom-application.png" />
+
     > Keep the application running for the next steps.
   </Step>
 
