Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -58,6 +58,10 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
     ngrok tcp 50061
     ```
 
+    Your output should look like this:
+
+    <img width="100%" src="/images/tunneling-with-ngrok.png" />
+
     This will give you a public endpoint that you can use to access your application.
   </Step>
 
