--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -38,10 +38,6 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
     node index.js
     ```
 
-    Your output should look like this:
-
-    <img width="100%" src="/images/custom-application.png" />
-
     > Keep the application running for the next steps.
   </Step>
 
@@ -105,13 +101,16 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
 
       You will be asked to enter the Application's name, speech information, and other details. Once you have entered this information, the Application will be created.
 
-      To confirm that the application was created successfully, you can run the following command:
+     Your output should look like this:
+
+     <img width="100%" src="/images/create-application.png" />
+
+
+      To can list your existing applications with the following command:
 
       ```bash
       fonoster applications:list
       ```
-
-      Your output should show the newly created Application.
     </Accordion>
 
     <Accordion title="Link a Twilio phone number">
